[package]
name = "question-marks-reply-bot-rs"
version = "0.1.0"
authors = ["AkinoKaede <i@akinokae.de>"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "^0.12.2", features = ["macros", "webhooks", "webhooks-axum"] }
log = "^0.4.20"
pretty_env_logger = "^0.5.0"
tokio = { version = "^1.34.0", features = ["rt-multi-thread", "macros", "rt"] }
lazy_static = "1.4.0"
clap = { version = "^4.4.10", features = ["derive"] }
url = "^2.5.0"
xdg = "^2.5.2"
sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros" ] }